// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AddMembers with dropdown 1`] = `
<div
  className="admin-module"
>
  <div
    className="admin-section__header"
  >
    Add Team Members
  </div>
  <div
    className="admin-section"
  >
    <div
      className="add-member"
    >
      <form
        className="add-member__input-form"
        id="add-member-form"
        onSubmit={[Function]}
      >
        <Dropdown
          baseClassName="Dropdown"
          onChange={[Function]}
          options={
            Array [
              "Team",
              "Team2",
            ]
          }
          value="Team"
        />
        <input
          className="add-member__input add-member__email"
          contentEditable={true}
          placeholder="Google account email"
        />
        <button
          className="btn btn--secondary btn--shine btn--add"
          type="submit"
        >
          +
        </button>
      </form>
    </div>
  </div>
  <div
    className="admin-expandable-area-container expandable-member-area"
  >
    <div
      className="admin-expandable-area__notification--white"
    >
      <div
        className="admin__key-square"
      />
       = Team admin
    </div>
    <div
      className="admin-expandable-area"
    >
      <div
        className="admin-area__item--admin"
        key="email"
      >
        <div
          className="admin-area__item-text"
        >
          email
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
      <div
        className="admin-area__item"
        key="email5"
      >
        <div
          className="admin-area__item-text"
        >
          email5
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
    </div>
  </div>
  <div
    className="admin-section__footer"
    onClick={[Function]}
  >
    View members
    <div
      className="chevron-logo-container member-chevron"
    >
      <svg
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`should render AddMembers with no dropdown 1`] = `
<div
  className="admin-module"
>
  <div
    className="admin-section__header"
  >
    Add Team Members
  </div>
  <div
    className="admin-section"
  >
    <div
      className="add-member"
    >
      <form
        className="add-member__input-form"
        id="add-member-form"
        onSubmit={[Function]}
      >
        <div
          className="add-member__team-name"
        >
          Team
        </div>
        <input
          className="add-member__input add-member__email"
          contentEditable={true}
          placeholder="Google account email"
        />
        <button
          className="btn btn--secondary btn--shine btn--add"
          type="submit"
        >
          +
        </button>
      </form>
    </div>
  </div>
  <div
    className="admin-expandable-area-container expandable-member-area"
  >
    <div
      className="admin-expandable-area__notification--white"
    >
      <div
        className="admin__key-square"
      />
       = Team admin
    </div>
    <div
      className="admin-expandable-area"
    >
      <div
        className="admin-area__item--admin"
        key="email"
      >
        <div
          className="admin-area__item-text"
        >
          email
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
      <div
        className="admin-area__item"
        key="email5"
      >
        <div
          className="admin-area__item-text"
        >
          email5
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
    </div>
  </div>
  <div
    className="admin-section__footer"
    onClick={[Function]}
  >
    View members
    <div
      className="chevron-logo-container member-chevron"
    >
      <svg
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;
